--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,4 +1,4 @@
-<% content_for :javascripts, javascript_include_tag('http://api-maps.yandex.ru/2.1/?lang=ru-RU') %>
+<% content_for :javascripts, javascript_include_tag('https://api-maps.yandex.ru/2.1/?lang=ru-RU') %>
 Сервис по поиску ресторанов и баров в пределах ТТК (кликните по карте и получите список заведений в радиусе 4 км).
 <div id="map" class="map"></div>
 <table class="near">
