--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,5 +1,6 @@
 <% content_for :javascripts, javascript_include_tag('https://api-maps.yandex.ru/2.1/?lang=ru-RU') %>
-Сервис по поиску ресторанов и баров в пределах ТТК (кликните по карте и получите список заведений в радиусе 4 км).
+Сервис по поиску ресторанов и баров в пределах ТТК
+(кликните по карте и получите список заведений в радиусе <%= BarsController::NEAR_DISTANCE %> км).
 <div id="map" class="map"></div>
 <table class="near">
     <caption>Результаты поиска:</caption>
@@ -7,6 +8,7 @@
         <tr>
             <th>№</th>
             <th>Адрес</th>
+            <th>Расстояние</th>
         </tr>
     <thead>
     <tbody></tbody>
